--- a/pages/model.html
+++ b/pages/model.html
@@ -15,12 +15,14 @@
     <header>
       <h1>Modele</h1>
       <ul>
-        <li><a href="../index.html">Exemple</a></li>
-        <li><a href="../index.html">Exemple</a></li>
-        <li><a href="../index.html">Exemple</a></li>
-        <li><a href="../index.html">Exemple</a></li>
+        <li class="selected"><a href="../index.html">Exemple</a><span></span></li>
+        <li><a href="../index.html">Exemple</a><span></span></li>
+        <li><a href="../index.html">Exemple</a><span></span></li>
+        <li><a href="../index.html">Exemple</a><span></span></li>
       </ul>
     </header>
+
+
 
     <nav id="nav-left">
       <form>
@@ -58,7 +60,7 @@
       <button class="bottom" onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
 
     </nav>
-    
+
     <main class="content">
 
       <h2>QU'EST CE QU'ATOM</h2>
