Peaufinage de la page modele.

--- a/pages/model.html
+++ b/pages/model.html
@@ -39,7 +39,7 @@
             <li>
               <a class="selected" href="./guide/utilisation.html">Utilisation</a>
               <ul id="display" class="tertiary">
-                <li><a class="selected" href="#fonctionnement">Fonctionnement</a></li>
+                <li><a class="selected" href="#fonctionnement">Général</a></li>
                 <li><a href="#git">Git</a></li>
               </ul>
             </li>
@@ -66,7 +66,9 @@
       <h2>QU'EST CE QU'ATOM</h2>
 
       <div class="banner">
-        <img src="../images/200x900-atom-banner.png" alt="">
+        <img src="../images/banner/200x300-atom-banner-1.jpg" alt="">
+        <img src="../images/banner/200x300-atom-banner-2.gif" alt="">
+        <img src="../images/banner/200x300-atom-banner-3.png" alt="">
       </div>
 
 
