ajout de transition

--- a/pages/model.html
+++ b/pages/model.html
@@ -58,8 +58,11 @@
         <li><a href="./pourAllerPlusLoin.html">Pour aller plus loin</a></li>
         <li><a href="./makingOf.html">Making Of</a></li>
       </ul>
-      <button class="bottom" onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
+      <form class="bottom">
+        <button onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
 
+        <a href="https://github.com/Me-k-01/TechnoWeb-Site">Repo</a>
+      </form>
     </nav>
 
     <main class="content">
@@ -72,7 +75,7 @@
         <img src="../images/banner/200x300-atom-banner-3.png" alt="">
       </div>
 
-      <section id="git">
+      <section id="general">
         <p>eeeeee</p>
       </section>
       <h2>Header</h2>
@@ -105,7 +108,7 @@
       <p>blablabla</p>
       <p>blablabla</p>
       <p>blablabla</p>
-      <section id="general">
+      <section id="git">
         <p>eeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
       </section>
       <p>blablabla</p>
