--- a/index.html
+++ b/index.html
@@ -2,25 +2,88 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Techno Web • Acceuil</title>
+    <title>Techno Web • Accueil</title>
     <link rel="stylesheet" href="./styles/stylesheet.css">
     <link rel="stylesheet" href="./styles/style-header.css">
+    <link rel="stylesheet" href="./styles/style-nav.css">
+
+    <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
+    <script src='./scripts/search.js' ></script>
+    <script src='./scripts/showVisibleSections.js' ></script>
   </head>
-  <body>
 
-    <header>
-      <h1>Tutoriel</h1>
-      <ul>
-        <li><a href="./Acceuil.html">Acceuil</a></li>
-        <li><a href="./makingOf.html">Making Of</a></li>
-        <li><a href="./makingOf.html">Making Of</a></li>
-        <li class="selected"><a href="./makingOf.html">Making Of</a></li>
+  <body onscroll="onScroll()">
+
+  <header>
+    <h1>Accueil</h1>
+  </header>
+    <nav id="nav-left">
+      <form>
+        <input class="search" type="text" onkeyup="search()" placeholder="Rechercher une section..">
+        <button class="submit" type="button" name="nav-search-submit" onclick="search()"><i class="fa fa-search"></i></button>
+      </form>
+
+      <ul class="primary">
+        <li><a href="./index.html">Accueil</a>
+          <ul  id="display" class="tertiary">
+            <li><a href="#presentation">Présentation</a></li>
+            <li><a href="#problem">Problématique</a></li>
+          </ul>
+        </li>
+        <li><a class="selected" href="./guide/instalation.html">Guide</a>
+          <ul class="secondary">
+            <li><a href="pages/guide/instalation.html">Instalation</a>
+            </li>
+            <li>
+              <a class="selected" href="pages/guide/utilisation.html">Utilisation</a>
+              <ul class="tertiary">
+                <li><a href="#general">Général</a></li>
+                <li><a href="#git">Git</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="pages/guide/package.html">Les Packages</a>
+              <ul class="tertiary">
+                <li><a href="#definition">Qu'est ce qu'un Package</a></li>
+                <li><a href="#recommendation">Recommendation</a></li>
+              </ul>
+            </li>
+            <li><a href="pages/guide/themes.html">Les Thèmes</a></li>
+          </ul>
+
+        </li>
+        <li><a href="pages/pourAllerPlusLoin.html">Pour aller plus loin</a></li>
+        <li><a href="pages/makingOf.html">Making Of</a>
+          <ul class="secondary">
+            <li><a href="#problem">Problématique</a></li>
+            <li><a href="#analytics">Google Analytics</a></li>
+          </ul>
+        </li>
       </ul>
-    </header>
+      <form class="bottom">
+        <button onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
+        <a href="https://github.com/Me-k-01/TechnoWeb-Site">Repository</a>
+      </form>
+    </nav>
 
-    <h2>Introduction:</h2>
-    <p>Ce site traite d'atom, et explique comment l'utiliser.</p>
+    <main class="content">
+      <div class="banner">
+        <img src="./images/banner/200x300-atom-banner-1.jpg" alt="">
+        <img src="./images/banner/200x300-atom-banner-2.gif" alt="">
+        <img src="./images/banner/200x300-atom-banner-3.png" alt="">
+      </div>
 
-    <h2>Description:</h2>
+      <section if="presentation">
+        <h2>Présentation</h2>
+        <p>blablabla</p>
+      </section>
+      <nav id="nav-bottom">
+        <a href="#"><i class="fas fa-chevron-left"></i></a>
+        <a href="#"><i class="fas fa-chevron-right"></i></a>
+      </nav>
+
+    </main>
+
+
   </body>
 </html>
