--- a/pages/model.html
+++ b/pages/model.html
@@ -21,6 +21,7 @@
         <li><a href="../index.html">Exemple</a><span></span></li>
         <li><a href="../index.html">Exemple</a><span></span></li>
       </ul>
+      <span class="line"></span>
     </header>
 
 
