--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -3,50 +3,91 @@
   <head>
     <meta charset="utf-8">
     <title>Techno Web • Making Of</title>
-    <link rel="stylesheet" href="../styles/stylesheet.css">
-    <link rel="stylesheet" href="../styles/style-header.css">
+    <link rel="stylesheet" href="../../styles/stylesheet.css">
+    <link rel="stylesheet" href="../../styles/style-header.css">
+    <link rel="stylesheet" href="../../styles/style-nav.css">
+
+    <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
+    <script src='../../scripts/search.js' ></script>
+    <script src='../../scripts/showVisibleSections.js' ></script>
   </head>
-  <body>
+
+  <body onscroll="onScroll()">
+
     <header>
-      <h1>Making Of</h1>
+      <h1>Consigne</h1>
+      <span class="line"></span>
     </header>
 
-    <ul>
-      <li>Le site contiendra au moins 4 pages l'accueil A, deux pages B et C, et D fils de B. </li>
-      <li>Votre problématique de traitement du sujet (brève introduction qui résume le contenu devotre site)</li>
-      <li>Vos sources principales d'information, on précisera en particulier leur URL précise</li>
-      <li>Le site contiendra des liens des types suivants :
-        <ul>
-          <li>lien interne vers d'autres pages HTML de votre site</li>
-          <li>lien interne vers la même page (modification directe du code HTML.)</li>
-          <li>lien externe (vers d'autres pages HTML que celles de votre site)</li>
-        </ul>
-      </li>
-      <li>Vous devez élaborer une rubrique « pour aller plus loin » proposant des liens vers des sitestraitant de prolongements du thème traité.</li>
-      <li>Le site contiendra exactement trois images de taille exactement
-        de 200pixels par 300pixels.<br>
-        Le poids de chaque image ne dépassera pas 60ko.<br>
-        Les images doivent être libres de droits et non-pixélisées.
-        <ul>
-          <li><a href="#">png</a></li>
-          <li><a href="#">jpeg</a></li>
-          <li><a href="#">gif</a></li>
-        </ul>
-      </li>
-      <li>Vous placerez un logo dans une taille de 145 pixels de large par 52 pixels de haut dans l'en-tête du site à côté du titre.</li>
-      <li>Le site contiendra un (seul) fichier pdf regroupant les captures d'écran de toutes vos pages, il sera placé en pièce jointe. </li>
-      <li>La page C contiendra une rubrique « making of » contenant:
-        <ul>
-          <li>Plusieurs captures d'écran issues de Google Analytics et présentant des statistiquesrelatives à votre site,
-            seront placées dans un fichier zippé placé en pièce jointe.
-            Ces imagesdoivent permettre d'identifier votre site (URL visible par exemple)
-          </li>
-          <li></li>
-        </ul>
-      </li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <nav id="nav-left">
+      <form class="top">
+        <input class="search" type="text" onkeyup="search()" placeholder="Rechercher une section..">
+        <button class="submit" type="button" name="nav-search-submit" onclick="search()"><i class="fa fa-search"></i></button>
+      </form>
+
+      <ul class="primary">
+        <li><a class="selected" href="./index.html">Accueil</a>
+          <ul id="display" class="tertiary">
+            <li><a href="#problem">Problématique</a></li>
+            <li><a href="#presentation">Présentation</a></li>
+          </ul>
+        </li>
+        <li><a href="pages/guide/instalation.html">Guide</a>
+          <ul class="secondary">
+            <li><a href="pages/guide/instalation.html">Instalation</a>
+            </li>
+            <li>
+              <a href="pages/guide/utilisation.html">Utilisation</a>
+              <ul class="tertiary">
+                <li><a href="#general">Général</a></li>
+                <li><a href="#git">Git</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="pages/guide/package.html">Les Packages</a>
+              <ul class="tertiary">
+                <li><a href="#definition">Qu'est ce qu'un Package</a></li>
+                <li><a href="#recommendation">Recommendation</a></li>
+              </ul>
+            </li>
+            <li><a href="pages/guide/themes.html">Les Thèmes</a></li>
+          </ul>
+
+        </li>
+        <li><a href="pages/pourAllerPlusLoin.html">Pour aller plus loin</a></li>
+        <li><a href="pages/makingOf.html">Making Of</a>
+          <ul class="secondary">
+            <li><a href="#problem">Problématique</a></li>
+            <li><a href="#analytics">Google Analytics</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="bottom">
+        <button onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
+        <a href="https://github.com/Me-k-01/TechnoWeb-Site">Repository</a>
+      </form>
+    </nav>
+
+    <main class="content">
+      <div class="banner">
+        <img src="./images/banner/200x300-atom-banner-1.jpg" alt="">
+        <img src="./images/banner/200x300-atom-banner-2.gif" alt="">
+        <img src="./images/banner/200x300-atom-banner-3.png" alt="">
+      </div>
+
+      <section id="problem">
+        <h2>Problématique</h2>
+        <p>Ce site vise à présenter l'éditeur de texte de GitHub: Atom</p>
+
+      </section>
+
+      <section id="presentation">
+        <h2></h2>
+
+      </section>
+
+    </main>
+
+
   </body>
 </html>
