redaction + correction de bug

--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -2,7 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Techno Web • Analyse Google</title>
+    <title>Techno Web • Utilisation</title>
     <link rel="stylesheet" href="../../styles/stylesheet.css">
     <link rel="stylesheet" href="../../styles/style-header.css">
     <link rel="stylesheet" href="../../styles/style-nav.css">
@@ -15,10 +15,11 @@
   <body onscroll="onScroll()">
 
     <header>
-      <h1>Making Of</h1>
+      <h1>Guide</h1>
       <ul>
-        <li><a href="./consignes.html">Consignes</a><span></span></li>
-        <li class="selected"><a href="./googleAnalitics.html">Analyse Google</a><span></span></li>
+        <li><a href="./installation.html">Installation</a><span></span></li>
+        <li class="selected"><a href="./utilisation.html">Utilisation</a><span></span></li>
+        <li><a href="./packages.html">Les Packages</a><span></span></li>
       </ul>
       <span class="line"></span>
     </header>
@@ -36,36 +37,41 @@
             <li><a href="#presentation">Présentation</a></li>
           </ul>
         </li>
-        <li><a href="../guide/installation.html">Guide</a>
+
+        <li><a class="selected" href="./installation.html">Guide</a>
           <ul class="secondary">
-            <li><a href="../guide/installation.html">Installation</a>
+
+            <li><a href="./installation.html">Installation</a>
             </li>
+
             <li>
-              <a href="../guide/utilisation.html">Utilisation</a>
-              <ul class="tertiary">
+              <a class="selected" href="./utilisation.html">Utilisation</a>
+              <ul id="display" class="tertiary">
                 <li><a href="#general">Général</a></li>
                 <li><a href="#git">Git</a></li>
               </ul>
             </li>
+
             <li>
-              <a href="../guide/packages.html">Les Packages</a>
+              <a href="./packages.html">Les Packages</a>
               <ul class="tertiary">
                 <li><a href="#definition">Qu'est ce qu'un Package</a></li>
                 <li><a href="#recommendation">Recommendation</a></li>
               </ul>
             </li>
           </ul>
-
         </li>
+
         <li><a href="../pourAllerPlusLoin.html">Pour aller plus loin</a></li>
 
-        <li><a class="selected" href="pages/makingOf.html">Making Of</a>
+        <li><a href="../makingOf/consignes.html">Making Of</a>
           <ul class="secondary">
-            <li><a href="consignes.html">Consignes</a></li>
-            <li><a class="selected" href="googleAnalitics.html">Google Analytics</a></li>
+            <li><a href="../makingOf/consignes.html">Consignes</a></li>
+            <li><a href="../makingOf/googleAnalitics.html">Google Analytics</a></li>
           </ul>
         </li>
       </ul>
+
       <form class="bottom">
         <button onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
         <a href="https://github.com/Me-k-01/TechnoWeb-Site">Repository</a>
@@ -73,10 +79,19 @@
     </nav>
 
     <main class="content">
+      <section id="general">
+        <p>
+          rtert
+        </p>
+      </section>
+
+      <section id="git">
+        <p>erzerzer</p>
+      </section>
 
       <nav id="nav-bottom">
-        <a href="consignes.html"><i class="fas fa-chevron-left"></i></a>
-        <a class="max" href="#"><i class="fas fa-chevron-right"></i></a>
+        <a href="installation.html"><i class="fas fa-chevron-left"></i></a>
+        <a href="packages.html"><i class="fas fa-chevron-right"></i></a>
       </nav>
     </main>
 
