--- a/pages/model.html
+++ b/pages/model.html
@@ -39,9 +39,9 @@
             <li><a href="#presentation">Présentation</a></li>
           </ul>
         </li>
-        <li><a class="selected" href="./guide/instalation.html">Guide</a>
+        <li><a class="selected" href="./guide/installation.html">Guide</a>
           <ul class="secondary">
-            <li><a href="./guide/instalation.html">Instalation</a>
+            <li><a href="./guide/installation.html">Installation</a>
             </li>
             <li>
               <a class="selected" href="./guide/utilisation.html">Utilisation</a>
@@ -51,21 +51,20 @@
               </ul>
             </li>
             <li>
-              <a href="./guide/package.html">Les Packages</a>
+              <a href="./guide/packages.html">Les Packages</a>
               <ul class="tertiary">
                 <li><a href="#definition">Qu'est ce qu'un Package</a></li>
                 <li><a href="#recommendation">Recommendation</a></li>
               </ul>
             </li>
-            <li><a href="./guide/themes.html">Les Thèmes</a></li>
           </ul>
 
         </li>
         <li><a href="./pourAllerPlusLoin.html">Pour aller plus loin</a></li>
-        <li><a href="./makingOf.html">Making Of</a>
+        <li><a href="./makingOf/consignes.html">Making Of</a>
           <ul class="secondary">
-            <li><a href="#problem">Problématique</a></li>
-            <li><a href="#analytics">Google Analytics</a></li>
+            <li><a href="./makingOf/consignes.html">Consignes</a></li>
+            <li><a href="./makingOf/googleAnalitics.html">Google Analytics</a></li>
           </ul>
         </li>
       </ul>
@@ -80,9 +79,9 @@
       <h2>QU'EST CE QU'ATOM</h2>
 
       <div class="banner">
-        <img src="../images/banner/200x300-atom-banner-1.jpg" alt="">
-        <img src="../images/banner/200x300-atom-banner-2.gif" alt="">
-        <img src="../images/banner/200x300-atom-banner-3.png" alt="">
+        <img src="../images/200x300/atom-banner-1.jpg" alt="">
+        <img src="../images/200x300/atom-banner-2.gif" alt="">
+        <img src="../images/200x300/atom-banner-3.png" alt="">
       </div>
 
       <section id="general">
