--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             <li><a href="#presentation">Présentation</a></li>
           </ul>
         </li>
-        <li><a href="pages/guide/instalation.html">Guide</a>
+        <li><a href="pages/guide/installation.html">Guide</a>
           <ul class="secondary">
-            <li><a href="pages/guide/instalation.html">Instalation</a>
+            <li><a href="pages/guide/installation.html">Installation</a>
             </li>
+
             <li>
               <a href="pages/guide/utilisation.html">Utilisation</a>
               <ul class="tertiary">
@@ -43,6 +44,7 @@
                 <li><a href="#git">Git</a></li>
               </ul>
             </li>
+
             <li>
               <a href="pages/guide/package.html">Les Packages</a>
               <ul class="tertiary">
@@ -50,15 +52,14 @@
                 <li><a href="#recommendation">Recommendation</a></li>
               </ul>
             </li>
-            <li><a href="pages/guide/themes.html">Les Thèmes</a></li>
           </ul>
 
         </li>
         <li><a href="pages/pourAllerPlusLoin.html">Pour aller plus loin</a></li>
-        <li><a href="pages/makingOf.html">Making Of</a>
+        <li><a href="pages/makingOf/consignes.html">Making Of</a>
           <ul class="secondary">
-            <li><a href="#problem">Problématique</a></li>
-            <li><a href="#analytics">Google Analytics</a></li>
+            <li><a href="pages/makingOf/consignes.html">Consignes</a></li>
+            <li><a href="pages/makingOf/googleAnalitics.html">Google Analytics</a></li>
           </ul>
         </li>
       </ul>
@@ -70,9 +71,9 @@
 
     <main class="content">
       <div class="banner">
-        <img src="./images/banner/200x300-atom-banner-1.jpg" alt="">
-        <img src="./images/banner/200x300-atom-banner-2.gif" alt="">
-        <img src="./images/banner/200x300-atom-banner-3.png" alt="">
+        <img id="jpg" src="./images/200x300/atom-banner-1.jpg" alt="">
+        <img id="gif" src="./images/200x300/atom-banner-2.gif" alt="">
+        <img id="png" src="./images/200x300/atom-banner-3.png" alt="">
       </div>
 
       <section id="problem">
@@ -84,62 +85,61 @@
       <section id="presentation">
         <h2>Présentation</h2>
         <h3>Qu'est-ce qu'Atom ?</h3>
-        <p>Atom est un logiciel libre d’édition de texte (dit open source).</p>
-        <p>Il est développé par GitHub et a été realisé avec Electron et Chromium,
-          et est ecrit en CoffeeScript.</p>
-        <p>Ce logiciel propose une integration de git,
-          mais egalement l'ajout facile d'extensions pouvant être développées par tous.</p>
-        <p>Écrit en Node.js ces extension appelées "package"
-           permettent d'implementer pas mal de fonctionnalitée au logiciel.</p>
-        <p>Notamment d'executer du script directement depuis l'éditeur,
-          ou de proposé des complements de ce que l'on ecrit suivant le language de programmation...</p>
+        <p>Atom est un logiciel libre d’édition de texte (dit open source) développé par GitHub,
+          realisé avec Electron et Chromium et écrit en CoffeeScript.</p>
+        <p>Ce logiciel propose une intégration de Git (logiciel de gestion de projet),
+          mais également l'ajout facile d'extensions pouvant être développées par tous.</p>
+        <p>Écrit en Node.js, ces extensions, appelées "packages",
+           permettent d'implémenter de nombreuses fonctionnalités au logiciel,
+           notamment celle d'exécuter des scripts directement depuis l'éditeur,
+           ou celle de compléter , selon le langage de programmation utilisé et si on le souhaite, ce que l'on est en train d'écrire</p>
 
         <h3>Pourquoi Atom ?</h3>
-        <p>La question qui vient alors à notre esprit est effectivement pourquoi utiliser Atom plutôt qu'un autre environnement de programmation?</p>
-        <p>En effet plusieurs autres alternative vous propose des avantages certains comme
-          Visual Studio Code de Microsoft, Sublime Text ou encore TextMate et j'en passe.</p>
-        <p>Et bien pour faire simple, ces éditeurs confèrent une customisation de l'éditeur toute fois limité.</p>
-
-        <p>On peut aussi citer parmis les avantages directes que propose Atom:</p>
+        <p>La question qui vient alors à l'esprit est effectivement : pourquoi utiliser Atom plutôt qu'un autre environnement de programmation?</p>
+        <p>En effet, plusieurs autres alternatives proposent des avantages certains, comme
+          Visual Studio Code de Microsoft, Sublime Text ou encore TextMate (et bien d'autres).</p>
+        <p>La réponse principale à cette question se trouve dans le degré de liberté de personnalisation offert.
+          Celui des éditeurs qui viennent d'être mentionnés sont généralement limité,
+          tandis qu'Atom fait une grande part de sa publicité
+          via la large marge de manœuvre qu'il offre (il prétend ainsi offrir,
+          selon ses propres mots, un "hackable editor")</p>
+        <p>On peut aussi citer, parmis les avantages directs que propose Atom :</p>
         <ul>
-          <li>Un éditeur de text sobre:
-            <p>Puisqu'il arrive casi totalement vierge, plus de perte dans les options compliqués des environnements de programmation</p>
-            <p>C'est à vous de le customiser ce qui peux être vu comme un avantage tout comme un inconveniant par certain</p>
+          <li>Un éditeur de text sobre :
+            <p>Puisqu'il arrive quasiment totalement vierge, l'utilisateur ne se perd pas dans les options nombreuses  et compliquées qu'on trouve usuellement dans les environnements de programmation (Eclipse, Visual Studio Community).</p>
+            <p>C'est à vous de le personnaliser, ce qui peut être vu comme un avantage ou comme un inconvenient par certains.</p>
           </li>
 
-          <li>Une large gamme de choix de customisation de l'editeur
-          </li>
-
-          <li>Une communauté active et dévoué:
-            <p>En effet la communauté supportant Atom est très active,
+          <li>Une communauté active et dévouée :
+            <p>En effet, la communauté supportant Atom est très active,
               elle propose une large gamme d'extension,
-              mais aussi de l'aide avec l'éditeur sur les forums dédiés
+              mais aussi de l'aide avec l'éditeur sur les forums dédiés.
             </p>
           </li>
 
-          <li>Un control de git intégrée:
-            <p>Il serait bien dommage de parler d'Atom sans mensionner son interface d'intégration de Git très avancé,
-            vous permettant de voir facilement en détail chaque modification que vous avez apporté à vos script, avant de les "pousser" à votre reperctoire.
-            L'interface est sobre mais très efficace, plus besoin de tapper de commande dans la console, ce n'est que l'affaire de quelques cliques!
+          <li>Un control de Git intégré :
+            <p>On ne saurait parler d'Atom sans mentionner son interface d'intégration de Git très avancé,
+            vous permettant de voir facilement et en détails chaque modification que vous avez apportée à vos scripts, avant de les placer dans votre répertoire GitHub.
+            L'interface est sobre mais très efficace, plus besoin de taper de commande dans la console, ce n'est que l'affaire de quelques clics.
             </p>
           </li>
         </ul>
 
-        <h3>Un éditeur fait pour vous?</h3>
-        <p>En résumé c'est un éditeur très basique,
-          mais proposant également pas mal de possibilité de customisation.</p>
-        <p>C'est pour quoi je recommanderais cette éditeur à ceux qui veulent pouvoir customiser à leurs guise l'éditeur</p>
-        <p>Et qui non pas peur de passer un peu de temps à choisir qu'elle extensions ils souhaitent ajouter à l'éditeur.</p>
-        <p>Il est interessant pour ceux souhaitant avoir une large paneaupli de choix de modification déjà codé par d'autres enthousiaste de ce logiciel.</p>
-        <p>Il convient au debutant souhaitant faire leurs dans sur leurs dents sur leurs premieres lignes de code
-          sans avoir à appendre comment marche leurs environnement de travail (le logiciel étant extrèmement intuitif)</p>
-        <p>Mais également au programmeur plus confirmé, souhaitant avoir un éditeur capable d'accomplir des taches plus spécifique</p>
+        <h3>Un éditeur fait pour vous ?</h3>
+        <p>Atom est, en résumé, un éditeur très basique,
+          mais qui propose pourtant plusieurs possibilités de personnalisation, c'est
+          pourquoi il peut être recommandé à toutes personnes désirant un haut degré de liberté dans
+          l'agencement de leur éditeur, et qui n'ont pas peur de passer un peu de temps à choisir
+          quelles extentions ils souhaitent lui ajouter.</p>
+
+        <p>Il convient également aux débutants souhaitant faire leurs débuts dans le codage
+          sans avoir à appendre comment marche leurs environnement de travail (le logiciel étant extrêmement intuitif), mais également
+          au programmeur plus confirmé, souhaitant avoir un éditeur capable d'accomplir des tâches plus spécifique</p>
 
 
       </section>
 
     </main>
-
 
   </body>
 </html>
