--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -2,16 +2,88 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles/stylesheet.css">
-    <link rel="stylesheet" href="../styles/tab.css">
     <title>Techno Web • Pour aller plus loin</title>
-  </head>
-  <body>
-    <a href="https://github.atom.io/">github sur atom</a>
-    <a href="https://github.com/atom/atom">Code source du projet</a>
+    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-nav.css">
 
-  <h2>Sources:</h2>
-    <a href="https://github.com/atom/atom">Github</a>
+    <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
+    <script src='../scripts/search.js' ></script>
+    <script src='../scripts/showVisibleSections.js' ></script>
+  </head>
+
+  <body onscroll="onScroll()">
+    <header>
+      <h1>Pour aller plus loin</h1>
+      <span class="line"></span>
+    </header>
+
+
+
+    <nav id="nav-left">
+      <form>
+        <input class="search" type="text" onkeyup="search()" placeholder="Rechercher une section..">
+        <button class="submit" type="button" name="nav-search-submit" onclick="search()"><i class="fa fa-search"></i></button>
+      </form>
+
+      <ul class="primary">
+        <li><a href="../index.html">Accueil</a>
+          <ul class="tertiary">
+            <li><a href="#problem">Problématique</a></li>
+            <li><a href="#presentation">Présentation</a></li>
+          </ul>
+        </li>
+        <li><a href="./guide/installation.html">Guide</a>
+          <ul class="secondary">
+            <li><a href="./guide/installation.html">Installation</a>
+            </li>
+            <li>
+              <a href="./guide/utilisation.html">Utilisation</a>
+              <ul class="tertiary">
+                <li><a href="#general">Général</a></li>
+                <li><a href="#git">Git</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="./guide/packages.html">Les Packages</a>
+              <ul class="tertiary">
+                <li><a href="#definition">Qu'est ce qu'un Package</a></li>
+                <li><a href="#recommendation">Recommendation</a></li>
+              </ul>
+            </li>
+          </ul>
+
+        </li>
+        <li><a class="selected" href="./pourAllerPlusLoin.html">Pour aller plus loin</a></li>
+        <li><a href="./makingOf/consignes.html">Making Of</a>
+          <ul class="secondary">
+            <li><a href="./makingOf/consignes.html">Consignes</a></li>
+            <li><a href="./makingOf/googleAnalitics.html">Google Analytics</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="bottom">
+        <button onClick="parent.location='mailto:auberval.florian01@gmail.com'">Contact</button>
+        <a href="https://github.com/Me-k-01/TechnoWeb-Site">Repository</a>
+      </form>
+    </nav>
+
+    <main class="content">
+
+      <div class="banner">
+        <img src="../images/200x300/atom-banner-1.jpg" alt="">
+        <img src="../images/200x300/atom-banner-2.gif" alt="">
+        <img src="../images/200x300/atom-banner-3.png" alt="">
+      </div>
+
+      <h2>Sources</h2>
+      <ul>
+        <li>
+          <a href="#">t</a>
+        </li>
+      </ul>
+
+    </main>
 
 
   </body>
