ajout de la page pere de guide

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#presentation">Présentation</a></li>
           </ul>
         </li>
-        <li><a href="pages/guide/installation.html">Guide</a>
+        <li><a href="pages/guide/guide.html">Guide</a>
           <ul class="secondary">
             <li><a href="pages/guide/installation.html">Installation</a>
             </li>
@@ -130,12 +130,11 @@
           mais qui propose pourtant plusieurs possibilités de personnalisation, c'est
           pourquoi il peut être recommandé à toutes personnes désirant un haut degré de liberté dans
           l'agencement de leur éditeur, et qui n'ont pas peur de passer un peu de temps à choisir
-          quelles extentions ils souhaitent lui ajouter.</p>
+          quelles extensions ils souhaitent lui ajouter.</p>
 
         <p>Il convient également aux débutants souhaitant faire leurs débuts dans le codage
           sans avoir à appendre comment marche leurs environnement de travail (le logiciel étant extrêmement intuitif), mais également
           au programmeur plus confirmé, souhaitant avoir un éditeur capable d'accomplir des tâches plus spécifique</p>
-
 
       </section>
 
