--- a/pages/guide/guide.html
+++ b/pages/guide/guide.html
@@ -2,7 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Techno Web • Installation</title>
+    <title>Techno Web • Guide</title>
     <link rel="stylesheet" href="../../styles/stylesheet.css">
     <link rel="stylesheet" href="../../styles/style-header.css">
     <link rel="stylesheet" href="../../styles/style-nav.css">
@@ -15,11 +15,9 @@
   <body onscroll="onScroll()">
 
     <header>
-      <a href="guide.html">
-        <h1>Guide</h1>
-      </a>
+      <h1>Guide</h1>
       <ul>
-        <li class="selected"><a href="./installation.html">Installation</a><span></span></li>
+        <li><a href="./installation.html">Installation</a><span></span></li>
         <li><a href="./utilisation.html">Utilisation</a><span></span></li>
         <li><a href="./packages.html">Les Packages</a><span></span></li>
       </ul>
@@ -40,10 +38,10 @@
           </ul>
         </li>
 
-        <li><a  class="selected" href="./guide.html">Guide</a>
+        <li><a class="selected" href="./guide.html">Guide</a>
           <ul class="secondary">
 
-            <li><a class="selected" href="./installation.html">Installation</a>
+            <li><a href="./installation.html">Installation</a>
             </li>
 
             <li>
@@ -82,8 +80,10 @@
 
     <main class="content">
       <section id="presentation">
+        <h3>Bienvenu dans ce tutoriel pour pouvoir utiliser pleinement toute les fonctionnalités d'atom</h3>
+
         <p>Bonjour jeune developpeur (ou peut-etre developpeur hautement experimenté, je ne vous connais pas).
-          Si vous etes venu jusqu'ici, c'est bien que cette editeur de texte a retenu votre attention!
+          Si vous êtes venu jusqu'ici, c'est bien que cette editeur de texte a retenu votre attention!
           Je vais donc vous expliquer a present comment obtenir cette application!
           Puis je vous expliquerais dans les rubrique suivante qu'est ce que sont les packages et comment les telecharger.
           Treve de blabla passons au tutoriel.
@@ -96,7 +96,7 @@
 
       <nav id="nav-bottom">
         <a class="max" href="#"><i class="fas fa-chevron-left"></i></a>
-        <a href="utilisation.html"><i class="fas fa-chevron-right"></i></a>
+        <a class="max" href="utilisation.html"><i class="fas fa-chevron-right"></i></a>
       </nav>
     </main>
 
