--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -15,7 +15,9 @@
   <body onscroll="onScroll()">
 
     <header>
-      <h1>Guide</h1>
+      <a href="guide.html">
+        <h1>Guide</h1>
+      </a>
       <ul>
         <li><a href="./installation.html">Installation</a><span></span></li>
         <li><a href="./utilisation.html">Utilisation</a><span></span></li>
@@ -38,7 +40,7 @@
           </ul>
         </li>
 
-        <li><a class="selected" href="./installation.html">Guide</a>
+        <li><a class="selected" href="./guide.html">Guide</a>
           <ul class="secondary">
 
             <li><a href="./installation.html">Installation</a>
