--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -59,7 +59,7 @@
         </li>
         <li><a href="../pourAllerPlusLoin.html">Pour aller plus loin</a></li>
 
-        <li><a class="selected" href="pages/makingOf.html">Making Of</a>
+        <li><a class="selected" href="consignes.html">Making Of</a>
           <ul class="secondary">
             <li><a class="selected" href="consignes.html">Consignes</a></li>
             <li><a href="googleAnalitics.html">Google Analytics</a></li>
@@ -75,9 +75,12 @@
     <main class="content">
       <h2>Travail à effectuer pour l'évalutation:</h2>
       <ul>
-        <li>Le site contiendra au moins 4 pages l'accueil A, deux pages B et C, et D fils de B. </li>
-        <li>Votre problématique de traitement du sujet (brève introduction qui résume le contenu devotre site)</li>
-        <li>Vos sources principales d'information, on précisera en particulier leur URL précise</li>
+        <li>Le site contiendra au moins 4 pages l'accueil
+          <a href="../../index.html">A</a>, deux pages <a href="../guide/guide.html">B</a> et <a href="../pourAllerPlusLoin.html">C</a>,
+          et <a href="../guide/utilisation.html">D</a> fils de <a href="../guide/guide.html">B</a>.
+        </li>
+        <li>Votre <a href="../../index.html#problem">problématique</a> de traitement du sujet (brève introduction qui résume le contenu devotre site)</li>
+        <li>Vos sources principales d'information, on précisera en particulier <a href="../pourAllerPlusLoin.html#sources">leur URL</a> précise</li>
         <li>Le site contiendra des liens des types suivants :
           <ul>
             <li>lien interne vers d'autres pages HTML de votre site</li>
@@ -85,7 +88,7 @@
             <li>lien externe (vers d'autres pages HTML que celles de votre site)</li>
           </ul>
         </li>
-        <li>Vous devez élaborer une rubrique « pour aller plus loin » proposant des liens vers des sitestraitant de prolongements du thème traité.</li>
+        <li>Vous devez élaborer une rubrique <a href="../pourAllerPlusLoin.html#complement">« pour aller plus loin »</a> proposant des liens vers des sitestraitant de prolongements du thème traité.</li>
         <li>Le site contiendra exactement trois images de taille exactement
           de 200pixels par 300pixels.<br>
           Le poids de chaque image ne dépassera pas 60ko.<br>
