--- a/pages/makingOf/googleAnalitics.html
+++ b/pages/makingOf/googleAnalitics.html
@@ -59,7 +59,7 @@
         </li>
         <li><a href="../pourAllerPlusLoin.html">Pour aller plus loin</a></li>
 
-        <li><a class="selected" href="pages/makingOf.html">Making Of</a>
+        <li><a class="selected" href="consignes.html">Making Of</a>
           <ul class="secondary">
             <li><a href="consignes.html">Consignes</a></li>
             <li><a class="selected" href="googleAnalitics.html">Google Analytics</a></li>
