--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -76,13 +76,31 @@
         <img src="../images/200x300/atom-banner-3.png" alt="">
       </div>
 
-      <h2>Sources</h2>
-      <ul>
-        <li>
-          <a href="#">t</a>
-        </li>
-      </ul>
+      <section id="complement">
+        <h2>Liens utiles:</h2>
+        <p>Des informations complementaires sont disponibles sur la documentation du <a href="https://atom.io/docs">site officiel d'Atom</a>
+          ou sur le <a href="https://github.com/atom/atom"> Repository GitHub d'Atom</a> </p>
+      </section>
 
+      <h2>Références</h2>
+      <section id="sources">
+        <h3>Sources</h3>
+        <ul>
+          <li>
+            <a href="https://flight-manual.atom.io/">Manuel d'utilisation d'atom</a>
+          </li>
+          <li>
+            <a href="https://fr.wikipedia.org/wiki/Atom_(%C3%A9diteur_de_texte)">Wikipedia</a>
+          </li>
+        </ul>
+      </section>
+      <section id="references">
+        <h3>Ressources utilisé:</h3>
+        <ul>Images:
+          <li> <a href="https://commons.wikimedia.org/wiki/File:Atom_editor_logo.svg">Logo d'Atom</a> </li>
+          <li> <a href="https://github.com/atom/atom">Banniere d'Illustration</a> </li>
+        </ul>
+      </section>
     </main>
 
 
