redac de l'installation

--- a/pages/guide/installation.html
+++ b/pages/guide/installation.html
@@ -44,6 +44,10 @@
           <ul class="secondary">
 
             <li><a class="selected" href="./installation.html">Installation</a>
+              <ul id="display" class="tertiary">
+                <li><a href="#download">Téléchargement</a></li>
+                <li><a href="#config">Configuration</a></li>
+              </ul>
             </li>
 
             <li>
@@ -81,17 +85,31 @@
     </nav>
 
     <main class="content">
-      <section id="presentation">
-        <p>Bonjour jeune developpeur (ou peut-etre developpeur hautement experimenté, je ne vous connais pas).
-          Si vous etes venu jusqu'ici, c'est bien que cette editeur de texte a retenu votre attention!
-          Je vais donc vous expliquer a present comment obtenir cette application!
-          Puis je vous expliquerais dans les rubrique suivante qu'est ce que sont les packages et comment les telecharger.
-          Treve de blabla passons au tutoriel.
-        </p>
-      </section>
+      <section id="download">
+        <h2>Téléchargement</h2>
+        <p>Tout d'abord vous pouvez télécharger Atom sur Windows, Mac os et Linux sur le <a href="https://atom.io/">site officiel</a>. </p>
+        <p>L'installation se résume a appuyer sur suivant, suivant, suivant et accepter les thermes d'utilisation de l’éditeur.</p>
+        <p>Il vous sera proposez d'agreer a l'envoie des données telemetrique,
+          Je vous conseil simplement de fermer toute ces pages inutiles</p>
 
-      <section id="installation">
-        <p></p>
+      </section>
+      <section id="config">
+        <h2>Configuration</h2>
+        <p>Les parametres sont accessible en appuyant sur les touches Ctrl + Virgule.
+          Il est égalemment accessible depuis le menu du haut File > settings pour Windows ou depuis Edit > preférences pour Linux.</p>
+        <p>Une fois arrivé sur cette fenêttre vous aurez des options qui s'afficherons devant vous</p>
+        <p>Je vais en souligner quelque une que je trouve digne d'interet:</p>
+
+        <ul>
+          <li>Auto Hide Menu Bar
+            <p>Simplement parce que cela peut etre quelque peux distrayant d'avoir une bande blanche au dessus de ce que l'on code
+              (ne vous inquietez pas il sera toujours accessible en appuyant sur Alt)</p>
+          </li>
+          <li>Restore Previous Window On Start
+            <p>Pour un retour rapide au travail.</p>
+          </li>
+        </ul>
+        <p>Pour le reste je vous laisse dessider par vous meme de ce que vous voulez.</p>
       </section>
 
       <nav id="nav-bottom">
