--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -80,15 +80,15 @@
           et <a href="../guide/utilisation.html">D</a> fils de <a href="../guide/guide.html">B</a>.
         </li>
         <li>Votre <a href="../../index.html#problem">problématique</a> de traitement du sujet (brève introduction qui résume le contenu devotre site)</li>
-        <li>Vos sources principales d'information, on précisera en particulier <a href="../pourAllerPlusLoin.html#sources">leur URL</a> précise</li>
+        <li>Vos sources principales d'information, on précisera en particulier <a href="../pourAllerPlusLoin.html#sources">leur URL précise</a></li>
         <li>Le site contiendra des liens des types suivants :
           <ul>
             <li>lien interne vers d'autres pages HTML de votre site</li>
             <li>lien interne vers la même page (modification directe du code HTML.)</li>
-            <li>lien externe (vers d'autres pages HTML que celles de votre site)</li>
+            <li><a href="../pourAllerPlusLoin.html#complement">lien externe</a> (vers d'autres pages HTML que celles de votre site)</li>
           </ul>
         </li>
-        <li>Vous devez élaborer une rubrique <a href="../pourAllerPlusLoin.html#complement">« pour aller plus loin »</a> proposant des liens vers des sitestraitant de prolongements du thème traité.</li>
+        <li>Vous devez élaborer une rubrique <a href="../pourAllerPlusLoin.html#complement">« pour aller plus loin »</a> proposant des liens vers des sites traitant de prolongements du thème traité.</li>
         <li>Le site contiendra exactement trois images de taille exactement
           de 200pixels par 300pixels.<br>
           Le poids de chaque image ne dépassera pas 60ko.<br>
@@ -105,14 +105,19 @@
           <ul>
             <li>Plusieurs captures d'écran issues de Google Analytics et présentant des statistiquesrelatives à votre site,
               seront placées dans un fichier zippé placé en pièce jointe.
-              Ces imagesdoivent permettre d'identifier votre site (URL visible par exemple)
+              Ces images doivent permettre d'identifier votre site (URL visible par exemple)
             </li>
-            <li></li>
+            <li>Des indications précises sur l'ensemble des éléments précédents qui vont être évalués (un lien sur la problématique de votre sujet,
+              un lien vers l'efroit contenant les sources utilisées, ...)
+            </li>
+            <li>Optionnel hors barème:
+            Vous placerez une vidéo ouvrable sur votre site mais hébergée sur youtube montrant un screencast vous montrant en train de zipper les 3 copies d'écran
+          que vous déposez sur votre site. Pour faire des screencasts, vous pouvez utiliser CamStudio sous Windows ou gtk-recordmydesktop sous linux.
+          Un accompagnement audio n'est pas interdit.</li>
           </ul>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <p>L'évaluation du site se fera sur la base du respect des consignes précédentes,
+          de la pertinence et de la richesse des informations fournies et de la personnalisation (originalité, esthétique, ect).</p>
       </ul>
 
       <nav id="nav-bottom">
