Redac des packages

--- a/pages/guide/installation.html
+++ b/pages/guide/installation.html
@@ -95,7 +95,7 @@
       </section>
       <section id="config">
         <h2>Configuration</h2>
-        <p>Les parametres sont accessible en appuyant sur les touches Ctrl + Virgule.
+        <p>Les parametres sont accessible en appuyant simmultanement sur les touches "Ctrl" + ",".
           Il est égalemment accessible depuis le menu du haut File > settings pour Windows ou depuis Edit > preférences pour Linux.</p>
         <p>Une fois arrivé sur cette fenêttre vous aurez des options qui s'afficherons devant vous</p>
         <p>Je vais en souligner quelque une que je trouve digne d'interet:</p>
