--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -84,19 +84,48 @@
       <section id="definition">
         <h2>Qu'est ce qu'un package ?</h2>
         <p>
-          rtert
+          Les packages sont des extensions développées par la communauté
+          fournissant une grande variété de fonctionnalité à Atom.
+          Développées en Node.js, ils sont facilement installable depuis la rubrique installation des parametres ("Ctrl" + ","),
+          mais une fois installées, accessible et configurable depuis la rubrique packages des parametres.
         </p>
       </section>
 
       <section id="recommendation">
         <h2>Recommendation</h2>
-        <p>Dans cette section, je vous donnerais quelques conseils de packages que je trouve interressant à souligner.</p>
+        <p>Dans cette section, je vous recommenderait quelques packages que je trouve bon à avoir sous la main.</p>
         <ul>
-          <li>
-
+          <li> <a href="https://atom.io/packages/script">Script</a>
+            <p>Qui premet d'executer vos scripts confortablement depuis l'éditeur.
+              Fonctionnant avec une très grande parti des languages de programmation.
+            </p>
+            <p><strong>
+              Attention! Il vous faut tout de même que la commande lié à l'execution de votre script </strong> (ex: python script.py) <strong> soit accessible comme <a href="https://fr.wikipedia.org/wiki/Variable_d%27environnement">Variable d'environnement</a> grace au <a href="https://fr.wikipedia.org/wiki/Path">PATH</a>.
+              </strong> Car tous ce que fait cette extensions est de lancer votre script dans un terminal.
+             </p>
           </li>
-          <li>
+          <li> <a href="https://atom.io/packages/browser-plus">BrowserPlus</a>
+            <p>Pour pouvoir travailler facilement sur ces projet web, avec notamment un raffraichisseur automatique de la page que l'on peut activer a souhait (icon d'eclaire)</p>
+          </li>
+          <li> <a href="https://atom.io/packages/linter">Linter</a>
+            <p>Pour voir ses erreurs de synthaxe et autres s'afficher de maniere dynamique dans l'éditeur.</p>
+          </li>
+          <li> <a href="https://atom.io/packages/color-picker">Color Picker</a>
+            <p>Pour choisir une couleur de maniere simple et avoir accès au differents codes de celles-ci (rgb, hexadecimal, ...)</p>
+          </li>
+          <li> <a href="https://atom.io/packages/teletype">Teletype</a>
+            <p>Pour travaililler a plusieurs sur un document.</p>
+          </li>
+          <li> <a href="https://atom.io/packages/ask-stack">Ask Stack</a>
+            <p>Pour rapidement avoir accès au forum de <a href="https://stackoverflow.com/">Stack Overflow</a> depuis l'éditeur</p>
+          </li>
 
+          <li> <a href="https://atom.io/packages/pigments">Pigments</a>
+            <p>Pour voir les codes couleurs se surligner de leurs couleurs correspondantes.</p>
+          </li>
+
+          <li> <a href="https://atom.io/packages/atom-live-server">Atom Live Server</a>
+            <p>Pour générer un serveur http local.</p>
           </li>
         </ul>
       </section>
