--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -18,8 +18,6 @@
       <span class="line"></span>
     </header>
 
-
-
     <nav id="nav-left">
       <form>
         <input class="search" type="text" onkeyup="search()" placeholder="Rechercher une section..">
@@ -96,7 +94,8 @@
       </section>
       <section id="references">
         <h3>Ressources utilisé:</h3>
-        <ul>Images:
+
+        <ul><h4>Images:</h4>
           <li> <a href="https://commons.wikimedia.org/wiki/File:Atom_editor_logo.svg">Logo d'Atom</a> </li>
           <li> <a href="https://github.com/atom/atom">Banniere d'Illustration</a> </li>
         </ul>
